# enttok-e

./: .gitignore  AGENTS.md  CLAUDE.md  package.json  temp.md
.claude/: settings.json  settings.local.json
.claude/agents/: code-refactoring-specialist.md
backend/: AGENTS.md  pyproject.toml
backend-bun/: README.md  bunfig.toml  package.json  tsconfig.json
backend-bun/data/: index.db
backend-bun/scripts/: build.ts
backend-bun/src/: app.ts  index.ts
backend/app/: main.py
backend/app/api/: activity.py  calendar.py  claude.py  confluence.py  deps.py  events.py  health.py  jira.py  jobs.py  memory.py  status.py
backend/app/core/: config.py  logging.py
backend/app/db/: atlassian_repo.py  calendar_repo.py  connection.py  jobs_repo.py  memory_repo.py
backend/app/mcp/: __init__.py  server.py  tools.py
backend/app/schemas/: activity.py  atlassian.py  calendar.py  claude.py  jira.py  jobs.py  memory.py
backend/app/services/: atlassian_client.py  calendar.py  chroma.py  claude.py  confluence.py  google_calendar.py  google_oauth.py  jira.py  jobs.py  memory.py  scheduler.py  search.py  sessions.py
backend/app/utils/: time.py
backend/app/websocket/: manager.py
docs/: calendar_integration_research.md  report.md
docs/backend-spec/: research.md  spec.md
docs/bun-migration/: README.md  checklist.md  current-architecture.md  migration-plan.md  risks.md  (+2 more)
electron-app/: .cta.json  .gitignore  AGENTS.md  README.md  electron-builder.json  index.html  package.json  pnpm-lock.yaml  tsconfig.node.json  tsconfig.preload.json  vite-env.d.ts  vite.config.ts
(+177 files in other folders)
